--- a/css/lottery.css
+++ b/css/lottery.css
@@ -1,166 +1,293 @@
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 body {
-	width: 100%;
-	overflow-x: hidden;
-	font-family: "Microsoft YaHei",微软雅黑;
+    width: 100%;
+    overflow-x: hidden;
+    font-family: "Microsoft YaHei", 微软雅黑;
 }
-.container{
-	width: 100%;
-	position: relative;
+
+.container {
+    width: 100%;
+    position: relative;
 }
-.top_{
-	background: url(../img/top.jpg) no-repeat;
-	background-size: 100% 100%;
-	width: 100%;
-	height: 0.68rem;
-	position: relative;
+
+.top_ {
+    background: url(../img/top.jpg) no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 0.64rem;
+    position: relative;
 }
-.close{
-	width: 0.5rem;
+
+.close {
+    width: 0.5rem;
     height: 0.5rem;
     position: absolute;
     right: .07rem;
     top: .05rem;
 }
-.main_{
-	width: 100%;
-	
+
+.main_ {
+    width: 100%;
+
 }
-.main_ img{
-	width: 100%
+
+.main_ img {
+    width: 100%;
+    display:inherit;
 }
-#info_list{ 
-	width: 79vw;
+
+#info_list {
+    width: 79vw;
     overflow: hidden;
     position: absolute;
     top: 25.5vw;
     height: 10vw;
     left: 12vw;
+    color: #f7383f
 }
-#info_list ul{
-	width: 50%;
-	font-size: 14px
-}
-.box {
-	width: 600px;
-	height: 600px;
-	background-color: #DEA681;
-	border-radius: 50%;
-	margin: 30px auto;
-	padding: 20px;
-	position: relative;
-	overflow: hidden;
-}
-.lottery {
-	width: 600px;
-	height: 600px;
-	margin: 0 auto;
-	border-radius: 50%;
-	overflow: hidden;
-	position: relative;
-	background-color: #330000;
-	box-shadow: 0 0 15px #000;
-}
-.block {
-	box-shadow: 0 0 1px #000 inset;
-	position: absolute;
-	width: 300px;
-	height: 300px;
-	transform-origin: right bottom 0;
-	-webkit-transform-origin: right bottom 0;
-}
-.block:nth-child(odd) {
-	background-color: #F1AAA6;
-}
-.block:nth-child(even) {
-	background-color: #FD5B78;
-}
-.block:nth-child(1) {
-	transform: rotate(0deg) skewY(45deg);
-}
-.block:nth-child(2) {
-	transform: rotate(45deg) skewY(45deg);
-}
-.block:nth-child(3) {
-	transform: rotate(90deg) skewY(45deg);
-}
-.block:nth-child(4) {
-	transform: rotate(135deg) skewY(45deg);
-}
-.block:nth-child(5) {
-	transform: rotate(180deg) skewY(45deg);
-}
-.block:nth-child(6) {
-	transform: rotate(225deg) skewY(45deg);
-}
-.block:nth-child(7) {
-	transform: rotate(270deg) skewY(45deg);
-}
-.block:nth-child(8) {
-	transform: rotate(315deg) skewY(45deg);
-}
-.content {
-	width: 200px;
-	height: 230px;
-	transform-origin: center center 0;
-	transform: skewY(-45deg) rotate(-22.5deg) translate(10px, 70px);
-	-webkit-transform: skewY(-45deg) rotate(-22.5deg) translate(10px, 70px);
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	text-align: center;
-}
-.content .img {
-	width: 100px;
-	height: 100px;
-	margin: 0 auto;
-}
-.content .text {
-	width: 100px;
-	height: 50px;
-	font-size: 20px;
-	line-height: 32px;
-	margin: 0 auto;
-}
-.content .none {
-	width: 34px;
-	height: 200px;
-	margin: 0 auto;
-	text-align: center;
-	font-size: 34px;
-	line-height: 200%
-	font-weight: bold;
-}
-.content img {
-	width: 80px;
-	height: 100px;
-}
-.btn {
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 100px;
-	background-color: #9966CC;
-	position: absolute;
-	font-size: 28px;
-	top: 270px;
-	left: 270px;
-	cursor: pointer;
-	box-shadow: 0 0 14px #000 inset;
-	color: #FFF;
-}
-.str {
-	height: 0px;
-	width: 0px;
-	position: absolute;
-	top: 10px;
-	left: 300px;
-	border-top: 60px solid #9966CC;
-	border-left: 20px solid transparent;
-	border-right: 20px solid transparent;
 
+#info_list ul {
+    width: 50%;
+    font-size: 14px
+}
+
+.box {
+    width: 45vw;
+    height: 45vw;
+    background:url(../img/round_bg.png) no-repeat;
+    background-size: 100% 100%;
+    border-radius: 50%;
+    padding: 4.2vw;
+    position: absolute;
+    overflow: hidden;
+    top: 40vw;
+    left: 1.8vw;
+    color: white
+}
+
+.lottery {
+    width: 45vw;
+    height: 45vw;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+}
+
+.block {
+    box-shadow: 0 0 1px #000 inset;
+    position: absolute;
+    width: 22.5vw;
+    height: 22.5vw;
+    transform-origin: right bottom 0;
+    -webkit-transform-origin: right bottom 0;
+}
+
+.block:nth-child(odd) {
+    background-color: #f25151;
+}
+
+.block:nth-child(even) {
+    background-color: #f9be93;
+}
+
+.block:nth-child(1) {
+    transform: rotate(0deg) skewY(45deg);
+}
+
+.block:nth-child(2) {
+    transform: rotate(45deg) skewY(45deg);
+}
+
+.block:nth-child(3) {
+    transform: rotate(90deg) skewY(45deg);
+}
+
+.block:nth-child(4) {
+    transform: rotate(135deg) skewY(45deg);
+}
+
+.block:nth-child(5) {
+    transform: rotate(180deg) skewY(45deg);
+}
+
+.block:nth-child(6) {
+    transform: rotate(225deg) skewY(45deg);
+}
+
+.block:nth-child(7) {
+    transform: rotate(270deg) skewY(45deg);
+}
+.block:nth-child(7) .content .none,.block:nth-child(8) .content .none{
+	line-height: 3vw
+} 
+.block:nth-child(8) {
+    transform: rotate(315deg) skewY(45deg);
+}
+
+.content {
+    width: 15vw;
+    height: 15vw;
+    transform-origin: center center 0;
+    transform: skewY(-45deg) rotate(-22.5deg) translate(10px, 70px);
+    -webkit-transform: skewY(-45deg) rotate(-22.5deg) translate(10px, 70px);
+    position: absolute;
+    right: .39rem;
+    bottom: 3.5vw;
+    text-align: center;
+}
+
+.content .img {
+    width: 7.5vw;
+    margin: 0 auto;
+}
+
+.content .text {
+    width: 15vw;
+    height: 7.5vw;
+    font-size: 12px;
+    line-height: 14px;
+    margin: 0 auto;
+}
+
+.content .none {
+    width: 12vw;
+    height: 6vw;
+    line-height: 6vw;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 14px;
+    line-height: 200% font-weight: bold;
+}
+
+.content img {
+    width: 6vw;
+}
+
+.btn {
+    width: 12vw;
+    height: 12vw;
+    background:url(../img/round.png) no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    font-size: 18px;
+    top: 20vw;
+    left:  20vw;
+}
+
+
+.task_list {
+    width: 35vw;
+    overflow: auto;
+    position: absolute;
+    top: 49.5vw;
+    height: 16.3vw;
+    right: 9vw;
+    color: #c45605
+}
+
+.task_item {
+    width: 90%;
+    margin: 0 auto 5px;
+    border-radius: 2vw;
+    background-color: white;
+    padding: .5vw
+}
+
+.task_list img {
+    width: 18%;
+    float: right;
+    vertical-align: top
+}
+
+.task_list span {
+    display: inline-block;
+    max-width: 80%;
+    float: left;
+    white-space: normal;
+    word-break: break-all;
+
+}
+
+.clear {
+    clear: both;
+}
+
+.root_list {
+    width: 35vw;
+    overflow: auto;
+    position: absolute;
+    top: 72vw;
+    height: 16.3vw;
+    right: 9vw;
+    color: #c45605
+}
+
+.root_item {
+    width: 90%;
+    margin: 0 auto 5px;
+    border-radius: 2vw;
+    padding: .5vw
+}
+
+/* 针对缺省样式 (必须的) */
+::-webkit-scrollbar {
+    width: 1vw;
+    height: 0px;
+}
+
+/* 滚动条的滑轨背景颜色 */
+::-webkit-scrollbar-track {
+    background-color: #c0632a;
+    border-radius: .4vw;
+}
+
+/* 滑块颜色 */
+::-webkit-scrollbar-thumb {
+    background-color: #feb04b;
+    border-radius: 2vw;
+}
+
+/*内层轨道的颜色*/
+::-webkit-scrollbar-track-piece {
+    background-color: #c0632a;
+    border-radius: .4vw;
+}
+
+/* 滑轨两头的监听按钮颜色 */
+::-webkit-scrollbar-button {
+    background-color: #c0632a;
+    width: 0;
+    height: 0;
+}
+
+/* 横向滚动条和纵向滚动条相交处尖角的颜色 */
+::-webkit-scrollbar-corner {
+    background-color: black;
+
+}
+.lottery_time{
+	position: absolute;
+    width: 20vw;
+    height: 5vw;
+    color: white;
+    font-size: 17px;
+    bottom: 3vw;
+    right: 30vw;
+    text-align: center;
+}
+.lottery_record{
+	position: absolute;
+    width: 20vw;
+    height: 5vw;
+    text-align: center;
+    color: white;
+    font-size: 17px;
+    right: 7vw;
+    bottom: 3vw;
+    text-decoration: underline;
 }
